added get one function

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,25 @@
             </div>
         </div>
 
+        <div class="row gx-5">
+            <div class="col-6">
+                <form class="mb-2">
+                    <h2>Get One</h2>
+                    <input type="number" id="inputId" class="form-control" placeholder="enter item id to get" />
+                    <button type="button" class="btn btn-primary mt-2" id="buttonGetOne">GET</button>
+                    <input type="text" style="display: none;" />
+                </form>
+            </div>
+
+            <div class="col-6">
+                <form class="mb-2">
+                    <h2>Read One</h2>
+                    <ul id="listOutput2"></ul>
+                </form>
+
+            </div>
+        </div>
+
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script type="module" src="./script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
