--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,47 @@
             </div>
         </div>
 
+        <div class="row gx-5">
+            <div class="col-6">
+                <form class="mb-2">
+                    <h2>Update One</h2>
+                    <input type="number" id="inputId2" class="form-control" placeholder="enter item id to put" />
+                    <input type="text" id="inputName2" class="form-control" placeholder="enter item name to put" />
+                    <input type="text" id="inputDescription2" class="form-control" placeholder="enter item desc to put" />
+                    <input type="number" id="inputPrice2" class="form-control" placeholder="enter item price to put" />
+                    <button type="button" class="btn btn-primary mt-2" id="buttonPutOne">PUT</button>
+                    <input type="text" style="display: none;" />
+                </form>
+            </div>
+
+            <!-- <div class="col-6">
+                <form class="mb-2">
+                    <h2>Update One</h2>
+                    <ul id="listOutput2"></ul>
+                </form>
+
+            </div> -->
+        </div>
+
+        <div class="row gx-5">
+            <div class="col-6">
+                <form class="mb-2">
+                    <h2>Delete One</h2>
+                    <input type="number" id="inputId3" class="form-control" placeholder="enter item id to delete" />
+                    <button type="button" class="btn btn-primary mt-2" id="buttonDeleteOne">DELETE</button>
+                    <input type="text" style="display: none;" />
+                </form>
+            </div>
+
+            <!-- <div class="col-6">
+                <form class="mb-2">
+                    <h2>Read One</h2>
+                    <ul id="listOutput2"></ul>
+                </form>
+
+            </div> -->
+        </div>
+
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script type="module" src="./script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
