--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
 </head>
 
 <body>
-    <div class="container-sm px-4">
+    <div class="container-sm px-4"> 
         <div class="row gx-5">
-            <h1>CRUD Application</h1>
+            <center><h1>CRUD Application</h1></center>
             <div class="col-6">
                 <form class="mb-2">
-                    <h2>Create</h2>
-                    <input type="text" id="inputName" class="form-control" placeholder="enter item name to create" />
-                    <input type="text" id="inputDescription" class="form-control mt-2" placeholder="enter item description to create" />
-                    <input type="number" id="inputPrice" class="form-control mt-2" placeholder="enter item price to create" />
-                    <button type="button" class="btn btn-primary mt-2" id="buttonCreate">POST</button>
+                    <h2>Create Item</h2>
+                    <input type="text" id="inputName" class="form-control" placeholder="Enter item name..." />
+                    <input type="text" id="inputDescription" class="form-control mt-2" placeholder="Enter item description..." />
+                    <input type="number" id="inputPrice" class="form-control mt-2" placeholder="Enter item price..." />
+                    <button type="button" class="btn btn-primary mt-2" id="buttonCreate">Create Item</button>
                     <input type="text" style="display: none;" />
                 </form>
             </div>
@@ -26,16 +26,15 @@
                     <h2>Read All</h2>
                     <ul id="listOutput"></ul>
                 </form>
-
             </div>
         </div>
 
         <div class="row gx-5">
             <div class="col-6">
                 <form class="mb-2">
-                    <h2>Get One</h2>
-                    <input type="number" id="inputId" class="form-control" placeholder="enter item id to get" />
-                    <button type="button" class="btn btn-primary mt-2" id="buttonGetOne">GET</button>
+                    <h2>Find an Item</h2>
+                    <input type="number" id="inputId" class="form-control" placeholder="Enter item ID to find..." />
+                    <button type="button" class="btn btn-primary mt-2" id="buttonGetOne">Find Item</button>
                     <input type="text" style="display: none;" />
                 </form>
             </div>
@@ -52,42 +51,27 @@
         <div class="row gx-5">
             <div class="col-6">
                 <form class="mb-2">
-                    <h2>Update One</h2>
-                    <input type="number" id="inputId2" class="form-control" placeholder="enter item id to put" />
-                    <input type="text" id="inputName2" class="form-control" placeholder="enter item name to put" />
-                    <input type="text" id="inputDescription2" class="form-control" placeholder="enter item desc to put" />
-                    <input type="number" id="inputPrice2" class="form-control" placeholder="enter item price to put" />
-                    <button type="button" class="btn btn-primary mt-2" id="buttonPutOne">PUT</button>
+                    <h2>Update an Item</h2>
+                    <input type="number" id="inputId2" class="form-control mt-2" placeholder="Enter item ID to update..." />
+                    <input type="text" id="inputName2" class="form-control mt-2" placeholder="Enter new name..." />
+                    <input type="text" id="inputDescription2" class="form-control mt-2" placeholder="Enter new descirption..." />
+                    <input type="number" id="inputPrice2" class="form-control mt-2" placeholder="Enter new price..." />
+                    <button type="button" class="btn btn-primary mt-2" id="buttonPutOne">Update Item</button>
                     <input type="text" style="display: none;" />
+                    
                 </form>
             </div>
-
-            <!-- <div class="col-6">
-                <form class="mb-2">
-                    <h2>Update One</h2>
-                    <ul id="listOutput2"></ul>
-                </form>
-
-            </div> -->
         </div>
 
         <div class="row gx-5">
             <div class="col-6">
                 <form class="mb-2">
-                    <h2>Delete One</h2>
-                    <input type="number" id="inputId3" class="form-control" placeholder="enter item id to delete" />
-                    <button type="button" class="btn btn-primary mt-2" id="buttonDeleteOne">DELETE</button>
+                    <h2>Delete an Item</h2>
+                    <input type="number" id="inputId3" class="form-control" placeholder="Enter item ID to delete..." />
+                    <button type="button" class="btn btn-primary mt-2" id="buttonDeleteOne">Delete Item</button>
                     <input type="text" style="display: none;" />
                 </form>
             </div>
-
-            <!-- <div class="col-6">
-                <form class="mb-2">
-                    <h2>Read One</h2>
-                    <ul id="listOutput2"></ul>
-                </form>
-
-            </div> -->
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
