--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 
 <head>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="container-sm px-4"> 
+    <div class="container-sm px-4">
         <div class="row gx-5">
-            <center><h1>CRUD Application</h1></center>
+            <center><br>
+                <h1 id="heading">Inventory Application</h1><br>
+            </center>
+        </div>
+        <!-- <br> -->
+        <div class="row gx-5">
+
             <div class="col-6">
                 <form class="mb-2">
                     <h2>Create Item</h2>
                     <input type="text" id="inputName" class="form-control" placeholder="Enter item name..." />
-                    <input type="text" id="inputDescription" class="form-control mt-2" placeholder="Enter item description..." />
+                    <input type="text" id="inputDescription" class="form-control mt-2"
+                        placeholder="Enter item description..." />
                     <input type="number" id="inputPrice" class="form-control mt-2" placeholder="Enter item price..." />
                     <button type="button" class="btn btn-primary mt-2" id="buttonCreate">Create Item</button>
                     <input type="text" style="display: none;" />
@@ -25,6 +33,23 @@
                 <form class="mb-2">
                     <h2>Read All</h2>
                     <ul id="listOutput"></ul>
+                </form>
+            </div>
+        </div>
+
+        <div class="row gx-5">
+            <div class="col-6">
+                <form class="mb-2">
+                    <h2>Update an Item</h2>
+                    <input type="number" id="inputId2" class="form-control mt-2"
+                        placeholder="Enter item ID to update..." />
+                    <input type="text" id="inputName2" class="form-control mt-2" placeholder="Enter new name..." />
+                    <input type="text" id="inputDescription2" class="form-control mt-2"
+                        placeholder="Enter new descirption..." />
+                    <input type="number" id="inputPrice2" class="form-control mt-2" placeholder="Enter new price..." />
+                    <button type="button" class="btn btn-primary mt-2" id="buttonPutOne">Update Item</button>
+                    <input type="text" style="display: none;" />
+
                 </form>
             </div>
         </div>
@@ -45,21 +70,6 @@
                     <ul id="listOutput2"></ul>
                 </form>
 
-            </div>
-        </div>
-
-        <div class="row gx-5">
-            <div class="col-6">
-                <form class="mb-2">
-                    <h2>Update an Item</h2>
-                    <input type="number" id="inputId2" class="form-control mt-2" placeholder="Enter item ID to update..." />
-                    <input type="text" id="inputName2" class="form-control mt-2" placeholder="Enter new name..." />
-                    <input type="text" id="inputDescription2" class="form-control mt-2" placeholder="Enter new descirption..." />
-                    <input type="number" id="inputPrice2" class="form-control mt-2" placeholder="Enter new price..." />
-                    <button type="button" class="btn btn-primary mt-2" id="buttonPutOne">Update Item</button>
-                    <input type="text" style="display: none;" />
-                    
-                </form>
             </div>
         </div>
 
